test_suite/tests/ui/borrow/duplicate_lifetime.stderr
error: duplicate borrowed lifetime `'a`
 --> $DIR/duplicate_lifetime.rs:6:22
  |
6 |     #[serde(borrow = "'a + 'a")]
  |                      ^^^^^^^^^

error: aborting due to previous error

